# unguard

./: .editorconfig  .gitallowed  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OWNERS  README.md  RELEASING.md  bump-version.sh  commitlint.config.js  insecure-example-92358853.py  package-lock.json  package.json  requirements-49322778.txt  skaffold.yaml
.bitbucket/: vogelgrippe-architecture.fig
.devcontainer/: Dockerfile  devcontainer.json  docker.sh  kind-cluster.yml  post-create.sh  post-start.sh
.github/: CODEOWNERS  README_RUNNER.md  copilot-instructions.md  in-solidarity.yml
.husky/: commit-msg
ad-service/: .env  .gitignore  AdService.csproj  Dockerfile  Program.cs  README.md  Startup.cs  ad-service.csproj  ad-service.sln  docker-compose.yml  dotNet-ad-service.csproj  dotNet-ad-service.sln
chart/: Chart.yaml  README.md  aws.yaml  jaeger-otlp-values.yaml  jaeger.yaml  jaegerDev.yaml  localDevMinikube.yaml  maliciousLoadGenerator.yaml  tracing.yaml  values.yaml
demo-secrets/: secrets.py
docs/: DEPLOYMENT.md  DEV-GUIDE.md  DEV-KIND-GUIDE.md  DYNATRACE.md  FALCO.md  FAQ.md  Falco.md  HELM-DEPLOYMENT.md  HELM-DEV-GUIDE.md  JAEGER-DEPLOYMENT.md  JAEGER-HELM-DEPLOYMENT.md  JAEGER-TRACING-DEPLOYMENT.md  JAEGER.md  MINIKUBE-DEV-GUIDE.md  MONACO.md  TERRAFORM.md  TRACING.md
dotNet-ad-service/: dotNet-ad-service.sln
src/payment-service/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/payment-service/payment_service/: db_connector.py  logger_config.py  routes.py  run.py  util.py
(+1248 files in other folders)
