[tool.poetry]
name = "payment-service"
version = "0.1.0"
description = ""
authors = ["Fabian Oraze <fabian.oraze@dynatrace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.0"
flask = "1.0.1"
jinja2 = "2.10"
werkzeug = "0.16.1"
itsdangerous = "0.24"
click = "6.7"
markupsafe = "1.1.1"
opentelemetry-distro = "0.46b0"
opentelemetry-exporter-jaeger = "1.21.0"
opentelemetry-propagator-jaeger = "1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "1.25.0"
opentelemetry-exporter-otlp-proto-http = "1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
